--- a/ru/index.html
+++ b/ru/index.html
@@ -411,7 +411,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="/assets/card rus/ios9.png" alt="iPhone News Feed"> 
+										<img class="front" src="../assets/card rus/ios9.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac9"></div>
 									</div>
 								</div>
@@ -419,7 +419,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="/assets/card rus/ios9.png" alt="iPhone News Feed"> 
+										<img class="back" src="../assets/card rus/ios9.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And9"></div>
 								</div> 
 							</div> 
