--- a/cs/index.html
+++ b/cs/index.html
@@ -183,8 +183,20 @@
 			<section class="section-two">
 				<div class="section-two-image">
 					
-					<span ><img class="section-two-image-one"loading="lazy"src="../assets/image-lending/generalEng/01-asap-ios-eng.gif" alt="Android menu"></span>
-					<span><img class="section-two-image-two" loading="lazy"src="../assets/image-lending/generalEng/01-asap-android-eng.gif" alt="IPhone menu"></span>
+					<!-- <span ><img class="section-two-image-one"loading="lazy"src="../assets/image-lending/generalEng/01-asap-ios-eng.gif" alt="Android menu"></span>
+					<span><img class="section-two-image-two" loading="lazy"src="../assets/image-lending/generalEng/01-asap-android-eng.gif" alt="IPhone menu"></span> -->
+					<span ><div class="box-frame">
+						<div class="inner-frame">
+							<img class="front" src="../assets/en-img/asapios.png" alt="iPhone News Feed"> 
+							<div class="island_poppup-IOS Mac1"></div>
+						</div>
+					</div></span>
+					<span><div class="box-frame x-right">
+						<div class="inner-frame">
+							<img class="back" src="../assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
+						<div class="island_poppup-Android And1"></div>
+					</div>
+				</div> </span>
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">Messenger</span>
@@ -248,7 +260,7 @@
 							<div class="product-front">
 									<div class="box-frame">
 										<div class="inner-frame">
-											<img class="front" src="../assets/en-img/profile_ios.png" alt="iPhone News Feed"> 
+											<img class="front" src="../assets/en-img/profile_ios.png" alt="iPhone News Feed">
 											<div class="island_poppup-IOS Mac2"></div>
 										</div>
 									</div>
