--- a/index.html
+++ b/index.html
@@ -182,20 +182,13 @@
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
-					<!-- <span ><img class="section-two-image-one"loading="lazy"src="assets/image-lending/generalEng/01-asap-ios-eng.gif" alt="Android menu"></span>
-					<span><img class="section-two-image-two" loading="lazy"src="assets/image-lending/generalEng/01-asap-android-eng.gif" alt="IPhone menu"></span> -->
-					<span ><div class="box-frame">
-						<div class="inner-frame">
-							<img class="front" src="../assets/en-img/asapios.png" alt="iPhone News Feed"> 
-							<div class="island_poppup-IOS Mac1"></div>
-						</div>
-					</div></span>
-					<span><div class="box-frame x-right">
-						<div class="inner-frame">
-							<img class="back" src="../assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
-						<div class="island_poppup-Android And1"></div>
+					<div class="inner-frame-image">
+						<img class="section-two-image" src="assets/en-img/asapios.png" alt="iPhone News Feed"> 
+						<div class="island_poppup-IOS1 Mac1"></div>
 					</div>
-				</div> </span>
+					<div class="inner-frame-image">
+						<img class="section-two-image" src="assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
+					<div class="island_poppup-Android1 And1"></div>
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">Messenger</span>
