--- a/index.html
+++ b/index.html
@@ -181,15 +181,17 @@
 				</div>
 			</section>
 			<section class="section-two">
-				<div class="section-two-image">
-					<div class="inner-frame-image">
-						<img class="section-two-image" src="assets/en-img/asapios.png" alt="iPhone News Feed"> 
-						<div class="island_poppup-IOS1 Mac1"></div>
-					</div>
-					<div class="inner-frame-image">
+				<div class="section-image" section-image>
+						<div class="section-two-image">
+							<div class="inner-frame-image">
+							<img class="section-two-image" src="assets/en-img/asapios.png" alt="iPhone News Feed"> 
+							<div class="island_poppup-IOS1 Mac1"></div>
+						</div>
+						<div class="inner-frame-image">
 						<img class="section-two-image" src="assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
-					<div class="island_poppup-Android1 And1"></div>
+						<div class="island_poppup-Android1 And1"></div>
 				</div>
+			</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">Messenger</span>
 					<span class="section-two-content-number">DIGITAL<br>ECOSYSTEM</span>
