--- a/index.html
+++ b/index.html
@@ -183,12 +183,13 @@
 			<section class="section-two">
 				<div class="section-two-image">
 					<div class="inner-frame-image">
-						<img class="section-two-image" src="assets/en-img/asapios.png" alt="iPhone News Feed"> 
+						<img class="section-two-image" src="/assets/en-img/asapios.png" alt="iPhone News Feed"> 
 						<div class="island_poppup-IOS1 Mac1"></div>
 					</div>
 					<div class="inner-frame-image">
-						<img class="section-two-image" src="assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
+						<img class="section-two-image" src="/assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
 					<div class="island_poppup-Android1 And1"></div>
+				</div>
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">Messenger</span>
