--- a/ru/index.html
+++ b/ru/index.html
@@ -187,11 +187,11 @@
 			<section class="section-two">
 				<div class="section-two-image">
 					<div class="inner-frame-image">
-						<img class="section-two-image" src="/assets/image-lending/1920/block 2-1.png" alt="iPhone News Feed"> 
+						<img class="section-two-image" src="../assets/image-lending/1920/block 2-1.png" alt="iPhone News Feed"> 
 						<div class="island_poppup-IOS1 Mac1"></div>
 					</div>
 					<div class="inner-frame-image">
-						<img class="section-two-image" src="/assets/image-lending/1920/block 2-1.png" alt="iPhone News Feed"> 
+						<img class="section-two-image" src="../assets/image-lending/1920/block 2-1.png" alt="iPhone News Feed"> 
 					<div class="island_poppup-Android1 And1"></div>
 				</div>
 				</div>
