--- a/cs/index.html
+++ b/cs/index.html
@@ -261,7 +261,7 @@
 							<div class="product-back">
 									<div class="box-frame">
 										<div class="inner-frame">
-											<img class="back" src="../assets/en-img/profile_ios.png" alt="iPhone News Feed"> 
+											<img class="back" src="../assets/en-img/profile_android.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-Android And-2"></div>
 									</div> 
 								</div> 
@@ -276,7 +276,7 @@
 							<div class="product-front">
 									<div class="box-frame">
 										<div class="inner-frame">
-											<img class="front" src="../assets/en-img/lentaios.png" alt="iPhone News Feed"> 
+											<img class="front" src="../assets/en-img/lentaandroid.png" alt="iPhone News Feed"> 
 											<div class="island_poppup-IOS Mac-3"></div>
 										</div>
 									</div>
@@ -284,7 +284,7 @@
 							<div class="product-back">
 									<div class="box-frame">
 										<div class="inner-frame">
-											<img class="back" src="../assets/en-img/lentaandroid.png" alt="iPhone News Feed"> 
+											<img class="back" src="../assets/en-img/lentaios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-Android And-3"></div>
 									</div> 
 								</div> 
@@ -345,7 +345,7 @@
 							<div class="product-front">
 									<div class="box-frame">
 										<div class="inner-frame">
-											<img class="front" src="../assets/en-img/findfriendios.png" alt="iPhone News Feed"> 
+											<img class="front" src="../assets/en-img/findfriendandroid.png" alt="iPhone News Feed"> 
 											<div class="island_poppup-IOS Mac-6"></div>
 										</div>
 									</div>
@@ -353,7 +353,7 @@
 							<div class="product-back">
 									<div class="box-frame">
 										<div class="inner-frame">
-											<img class="back" src="../assets/en-img/findfriendandroid.png" alt="iPhone News Feed"> 
+											<img class="back" src="../assets/en-img/findfriendios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-Android And-6"></div>
 									</div> 
 								</div> 
