--- a/ru/index.html
+++ b/ru/index.html
@@ -233,7 +233,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="../assets/card rus/iOS 1.png" alt="iPhone News Feed"> 
+										<img class="front" src="../assets/img/apps/asap_ios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-1"></div>
 									</div>
 								</div>
@@ -241,7 +241,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back"  src="../assets/card rus/iOS 1.png" alt="iPhone News Feed"> 
+										<img class="back"  src="../assets/img/apps/asap_android.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-1"></div>
 								</div> 
 							</div> 
@@ -256,7 +256,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="../assets/card rus/ios2.png" alt="iPhone News Feed"> 
+										<img class="front" src="../assets/img/apps/profile_ios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-2"></div>
 									</div>
 								</div>
@@ -264,7 +264,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="../assets/card rus/ios2.png" alt="iPhone News Feed"> 
+										<img class="back" src="../assets/img/apps/profile_android.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-2"></div>
 								</div> 
 							</div> 
@@ -279,7 +279,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="../assets/card rus/ios3.png" alt="iPhone News Feed"> 
+										<img class="front" src="../assets/img/apps/lenta_ios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-3"></div>
 									</div>
 								</div>
@@ -287,7 +287,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="../assets/card rus/ios3.png" alt="iPhone News Feed"> 
+										<img class="back" src="../assets/img/apps/lenta_android.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-3"></div>
 								</div> 
 							</div> 
@@ -302,7 +302,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="../assets/card rus/ios4.png" alt="iPhone News Feed"> 
+										<img class="front" src="../assets/img/apps/videos_ios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-4"></div>
 									</div>
 								</div>
@@ -310,7 +310,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="../assets/card rus/ios4.png" alt="iPhone News Feed"> 
+										<img class="back" src="../assets/img/apps/videos_android.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-4"></div>
 								</div> 
 							</div> 
@@ -325,7 +325,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="../assets/card rus/ios5.png" alt="iPhone News Feed"> 
+										<img class="front" src="../assets/img/apps/blackbox_ios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-5"></div>
 									</div>
 								</div>
@@ -333,7 +333,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="../assets/card rus/ios5.png" alt="iPhone News Feed"> 
+										<img class="back" src="../assets/img/apps/blackbox_android.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-5"></div>
 								</div> 
 							</div> 
@@ -348,7 +348,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="../assets/card rus/ios6.png" alt="iPhone News Feed"> 
+										<img class="front" src="../assets/img/apps/findfriends_ios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-6"></div>
 									</div>
 								</div>
@@ -356,7 +356,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="../assets/card rus/ios6.png" alt="iPhone News Feed"> 
+										<img class="back" src="../assets/img/apps/findfriends_android.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-6"></div>
 								</div> 
 							</div> 
@@ -371,7 +371,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="../assets/card rus/ios7.png" alt="iPhone News Feed"> 
+										<img class="front" src="../assets/img/apps/meetnet_ios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-7"></div>
 									</div>
 								</div>
@@ -379,7 +379,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="../assets/card rus/ios7.png" alt="iPhone News Feed"> 
+										<img class="back" src="../assets/img/apps/meetnet_android.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-7"></div>
 								</div> 
 							</div> 
@@ -394,7 +394,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="../assets/card rus/ios8.png" alt="iPhone News Feed"> 
+										<img class="front" src="../assets/img/apps/joblite_ios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-8"></div>
 									</div>
 								</div>
@@ -402,7 +402,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="../assets/card rus/ios8.png" alt="iPhone News Feed"> 
+										<img class="back" src="../assets/img/apps/joblite_android.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-8"></div>
 								</div> 
 							</div> 
@@ -417,7 +417,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="../assets/card rus/ios9.png" alt="iPhone News Feed"> 
+										<img class="front" src="../assets/img/apps/choose_ios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-9"></div>
 									</div>
 								</div>
@@ -425,7 +425,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="../assets/card rus/ios9.png" alt="iPhone News Feed"> 
+										<img class="back" src="../assets/img/apps/choose_android.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-9"></div>
 								</div> 
 							</div> 
