--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/en-img/profile_ios.png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/profile_android.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-2"></div>
 								</div> 
 							</div> 
@@ -277,7 +277,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/en-img/lentaios.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/lentaandroid.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-3"></div>
 									</div>
 								</div>
@@ -285,7 +285,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/en-img/lentaandroid.png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/lentaios.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-3"></div>
 								</div> 
 							</div> 
@@ -301,7 +301,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 
-										<img class="front" src="assets/en-img/videosandroid.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/videosios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-4"></div>
 
 									</div>
@@ -311,7 +311,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 
-										<img class="back" src="assets/en-img/videosios.png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/videosandroid.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-4"></div>
 
 								</div> 
@@ -328,7 +328,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 
-										<img class="front" src="assets/en-img/blacboxandroid.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/blacboxios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-5"></div>
 
 									</div>
@@ -337,7 +337,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-								  <img class="back" src="assets/en-img/blacboxios.png" alt="iPhone News Feed"> 
+								  <img class="back" src="assets/en-img/blacboxandroid.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-5"></div>
 
 								</div> 
@@ -353,7 +353,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/en-img/findfriendios.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/findfriendandroid.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-6"></div>
 									</div>
 								</div>
@@ -361,7 +361,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/en-img/findfriendandroid.png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/findfriendios.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-6"></div>
 								</div> 
 							</div> 
@@ -376,7 +376,7 @@
 						<div class="product-front eng-product-front">
 										<div class="box-frame">
 											<div class="inner-frame">
-												<img class="front" src="assets/en-img/meetnetandroid.png" alt="iPhone News Feed"> 
+												<img class="front" src="assets/en-img/meetnetios.png" alt="iPhone News Feed"> 
 												<div class="island_poppup-IOS Mac-7"></div>
 											</div>
 										</div>
@@ -384,7 +384,7 @@
 								<div class="product-back">
 										<div class="box-frame">
 											<div class="inner-frame">
-												<img class="back" src="assets/en-img/meetnetios.png" alt="iPhone News Feed"> 
+												<img class="back" src="assets/en-img/meetnetandroid.png" alt="iPhone News Feed"> 
 											<div class="island_poppup-Android And-7"></div>
 
 										</div> 
@@ -400,7 +400,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/en-img/JL2.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/JL.png" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-8"></div>
 									</div>
 								</div>
@@ -408,7 +408,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/en-img/JL.png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/JL2.png" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-8"></div>
 								</div> 
 							</div> 
