--- a/ru/index.html
+++ b/ru/index.html
@@ -204,7 +204,7 @@
 			<section class="section-as" id="abot-us">
 				<p class="section-as-heading">УЗНАЙТЕ <span class="section-as-heading-color">О НАС</span> БОЛЬШЕ</p>
 				<div class="section-as-video">
-					<iframe class="section-as-iframe-video" src="http://www.youtube.com/embed/SKOo0AYtYJg" frameborder="0" allowfullscreen></iframe>
+					<iframe class="section-as-iframe-video" src="https://www.youtube.com/embed/SKOo0AYtYJg" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</section>
 			<p class="section-about-as-heading"><span class="about-as-heading-color">БУДЬ ПЕРВЫМ</span> - ПОМОГИ НАМ <br> ПРОТЕСТИРОВАТЬ ПРИЛОЖЕНИЕ</p>
