эта версия на серваке

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta name="description" content="SFERA is a mobile application that includes messenger, dating, job search, social network and much more. In the SFERE platform, dozens of applications interact closely with each other.">
 		<meta name="keywords" content="ASAP, Profile, Feed, Video, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
 		<title>SFERA Project &#x2d; Official website, social network.</title>
-		<link rel="stylesheet" href="assets/css/landing7.css">
+		<link rel="stylesheet" href="assets/css/landing8.css">
 		<link rel="stylesheet" href="assets/css/landing-card7.css">
 		<link rel="stylesheet" href="assets/css/main.e1ae0bf7.css">
 		<link rel="stylesheet" href="assets/css/header7.css">
@@ -29,7 +29,7 @@
 				<div class="block-logo">
 					<div class="video-container">
 						<span class="close">&#10006;</span>
-						<video class="video" src="./assets/video/promo en.mp4" controls></video>
+						<video class="video" preload="none"src="./assets/video/promo en.mp4" controls></video>
 					</div>
 					<i class="button button_form_circle button_theme_image link_hide-text  video-player" ><span class="button__play-video">View a video about SFERA</span></i>
 					<label class="logo">
@@ -175,19 +175,19 @@
 						</li>
 					</ul>
 					<div class="section-block-one">
-						<span ><img class="section-image-one" src="assets/en-img/ios.png" alt="Android Phone"></span>
-						<span ><img class="section-image-two" src="assets/en-img/android .png " alt="Phone iPhone"></span>
+						<span ><img class="section-image-one" src="assets/en-img/ios.png" loading="lazy" alt="Android Phone"></span>
+						<span ><img class="section-image-two" src="assets/en-img/android .png " loading="lazy" alt="Phone iPhone"></span>
 					</div>
 				</div>
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
 					<div class="inner-frame-image">
-						<img class="section-two-image" src="assets/en-img/asapios.png" alt="iPhone News Feed"> 
+						<img class="section-two-image" src="assets/en-img/asapios.png" loading="lazy" alt="iPhone News Feed"> 
 					
 					</div>
 					<div class="inner-frame-image">
-						<img class="section-two-image" src="assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
+						<img class="section-two-image" src="assets/en-img/asaspandroid.png" loading="lazy" alt="iPhone News Feed"> 
 					<div class="island_poppup-Android1 And1"></div>
 				</div>
 				</div>
@@ -218,8 +218,8 @@
 					</ul>
 				</div>
 				<div class="block-for-image">
-					<span ><img class="block-for-image-one" src="assets/en-img/block 3-1.png" alt="Download apps for iPhone"></span>
-					<span ><img class="block-for-image-two" src="assets/en-img/block 3-2.png" alt="Download the app for android"></span>
+					<span ><img class="block-for-image-one" src="assets/en-img/block 3-1.png" loading="lazy" alt="Download apps for iPhone"></span>
+					<span ><img class="block-for-image-two" src="assets/en-img/block 3-2.png" loading="lazy" alt="Download the app for android"></span>
 				</div>
 			</section>
 			<section class="section-card">
@@ -231,7 +231,7 @@
 							<div class="product-front">
 									<div class="box-frame">
 										<div class="inner-frame">
-											<img class="front" src="assets/en-img/asapios.png" alt="iPhone News Feed"> 
+											<img class="front" src="assets/en-img/asapios.png" loading="lazy" alt="iPhone News Feed"> 
 											<div class="island_poppup-IOS Mac-1"></div>
 										</div>
 									</div>
@@ -239,7 +239,7 @@
 							<div class="product-back">
 									<div class="box-frame">
 										<div class="inner-frame">
-											<img class="back" src="assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
+											<img class="back" src="assets/en-img/asaspandroid.png" loading="lazy" alt="iPhone News Feed"> 
 										<div class="island_poppup-Android And-1"></div>
 									</div> 
 								</div> 
@@ -254,7 +254,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/en-img/profile_ios.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/profile_ios.png" loading="lazy" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-2"></div>
 									</div>
 								</div>
@@ -262,7 +262,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/en-img/profile_android.png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/profile_android.png" loading="lazy" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-2"></div>
 								</div> 
 							</div> 
@@ -277,7 +277,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/en-img/lentaandroid.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/lentaandroid.png" loading="lazy" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-3"></div>
 									</div>
 								</div>
@@ -285,7 +285,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/en-img/lentaios.png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/lentaios.png" loading="lazy" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-3"></div>
 								</div> 
 							</div> 
@@ -301,7 +301,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 
-										<img class="front" src="assets/en-img/videosios.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/videosios.png" loading="lazy" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-4"></div>
 
 									</div>
@@ -311,7 +311,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 
-										<img class="back" src="assets/en-img/videosandroid.png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/videosandroid.png" loading="lazy" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-4"></div>
 
 								</div> 
@@ -328,7 +328,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 
-										<img class="front" src="assets/en-img/blacboxios.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/blacboxios.png" loading="lazy" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-5"></div>
 
 									</div>
@@ -337,7 +337,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-								  <img class="back" src="assets/en-img/blacboxandroid.png" alt="iPhone News Feed"> 
+								  <img class="back" src="assets/en-img/blacboxandroid.png" loading="lazy" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-5"></div>
 
 								</div> 
@@ -353,7 +353,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/en-img/findfriendandroid.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/findfriendandroid.png" loading="lazy" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-6"></div>
 									</div>
 								</div>
@@ -361,7 +361,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/en-img/findfriendios.png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/findfriendios.png" loading="lazy" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-6"></div>
 								</div> 
 							</div> 
@@ -376,7 +376,7 @@
 						<div class="product-front eng-product-front">
 										<div class="box-frame">
 											<div class="inner-frame">
-												<img class="front" src="assets/en-img/meetnetios.png" alt="iPhone News Feed"> 
+												<img class="front" src="assets/en-img/meetnetios.png" loading="lazy" alt="iPhone News Feed"> 
 												<div class="island_poppup-IOS Mac-7"></div>
 											</div>
 										</div>
@@ -384,7 +384,7 @@
 								<div class="product-back">
 										<div class="box-frame">
 											<div class="inner-frame">
-												<img class="back" src="assets/en-img/meetnetandroid.png" alt="iPhone News Feed"> 
+												<img class="back" src="assets/en-img/meetnetandroid.png" loading="lazy" alt="iPhone News Feed"> 
 											<div class="island_poppup-Android And-7"></div>
 
 										</div> 
@@ -400,7 +400,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/en-img/JL.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/JL.png" loading="lazy" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-8"></div>
 									</div>
 								</div>
@@ -423,7 +423,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/en-img/Chooseios.png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/Chooseios.png" loading="lazy" alt="iPhone News Feed"> 
 										<div class="island_poppup-IOS Mac-9"></div>
 									</div>
 								</div>
@@ -431,7 +431,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/en-img/Chooseandroid.png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/Chooseandroid.png" loading="lazy" alt="iPhone News Feed"> 
 									<div class="island_poppup-Android And-9"></div>
 								</div> 
 							</div> 
@@ -514,15 +514,15 @@
 						<p class="block-eight-card-list-paragraf">Ask Me</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" class="block-eight-card-image" src="./assets/image-lending/generalEng/iOS - меню (5).png" alt="Calendar">
+						<img class="block-eight-card-image" class="block-eight-card-image" src="./assets/image-lending/generalEng/iOS - меню (5).png" loading="lazy" alt="Calendar">
 						<p class="block-eight-card-list-paragraf">Calendar</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (13).png" alt="White Box">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/generalEng/iOS - меню (13).png"  alt="White Box">
 						<p class="block-eight-card-list-paragraf" >White Box</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/generalEng/iOS - меню (13).png" alt="Holy Book">
+						<img class="block-eight-card-image" src="./assets/image-lending/generalEng/iOS - меню (13).png" loading="lazy" alt="Holy Book">
 						<p class="block-eight-card-list-paragraf">Holy Book</p>
 					</li>
 				</ul>
