--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				<div class="section-two-image">
 					<div class="inner-frame-image">
 						<img class="section-two-image" src="assets/en-img/asapios.png" loading="lazy" alt="iPhone News Feed"> 
-					
+						<div class="island_poppup-IOS1 Mac1"></div>
 					</div>
 					<div class="inner-frame-image">
 						<img class="section-two-image" src="assets/en-img/asaspandroid.png" loading="lazy" alt="iPhone News Feed"> 
