--- a/ru/index.html
+++ b/ru/index.html
@@ -188,7 +188,7 @@
 				<div class="section-two-image">
 					<div class="inner-frame-image">
 						<img class="section-two-image" src="../assets/image-lending/1920/block 2-1.png" alt="iPhone News Feed"> 
-						<!-- <div class="island_poppup-IOS1 Mac1"></div> -->
+						<div class="island_poppup-IOS1 Mac1 ruISland"></div>
 					</div>
 					<div class="inner-frame-image">
 						<img class="section-two-image" src="../assets/image-lending/1920/block 2-1.png" alt="iPhone News Feed"> 
