nurik9Team-Change

--- a/en/team.html
+++ b/en/team.html
@@ -247,9 +247,7 @@
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
                         <p class="item__person-name eng-item__person-name">Alexander<span class="item__person-role eng-item__person-role">iOS developer (intern)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/24.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
-                    <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-                        <p class="item__person-name eng-item__person-name">Sofia<span class="item__person-role eng-item__person-role">Team lead, android developer</span></p>
-                    </span><span class="item__image ibg"><img src="../assets/img/team/25.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
                         <p class="item__person-name eng-item__person-name">Kirill<span class="item__person-role eng-item__person-role">Android developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/26.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
@@ -321,12 +319,8 @@
                     </span><span class="item__image ibg"><img src="../assets/img/team/38.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
 
-                        <p class="item__person-name eng-item__person-name">Kirill <span class="item__person-role eng-item__person-role">QA</span></p>
+                        <p class="item__person-name eng-item__person-name">Kirill <span class="item__person-role eng-item__person-role">Team lead</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/39.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
-                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
-
-                        <p class="item__person-name eng-item__person-name">Amelia <span class="item__person-role eng-item__person-role">QA</span></p>
-                    </span><span class="item__image ibg"><img src="../assets/img/team/40.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
 
                         <p class="item__person-name eng-item__person-name">Andrey <span class="item__person-role eng-item__person-role">QA</span></p>
