--- a/cs/apps.html
+++ b/cs/apps.html
@@ -14,11 +14,11 @@
   <meta name="description" content="SFERA je mobilní aplikace, která zahrnuje posly, datování, hledání práce, sociální síť a další. V rámci platformy mezi sebou úzce spolupracují desítky aplikací.">
 	<meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
   <title>Oficiální web projektu SFERA, sociální síť.</title>
-  <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/apps9.css">
+  <link href="../assets/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/apps.css">
   <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../assets/css/header9.css">
+  <link rel="stylesheet" href="../assets/css/header.css">
 </head>
 <body>
   <div class="page">
