--- a/cs/index.html
+++ b/cs/index.html
@@ -14,10 +14,10 @@
   	<link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   	<link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
   	<title>Oficiální web projektu SFERA, sociální síť.</title>
-		<link rel="stylesheet" href="../assets/css/landing9.css">
-		<link rel="stylesheet" href="../assets/css/landing-card9.css">
-		<link rel="stylesheet" href="../assets/css/main.e1ae0bf9.css">
-		<link rel="stylesheet" href="../assets/css/header9.css">
+		<link rel="stylesheet" href="../assets/css/landing.css">
+		<link rel="stylesheet" href="../assets/css/landing-card.css">
+		<link rel="stylesheet" href="../assets/css/main.css">
+		<link rel="stylesheet" href="../assets/css/header.css">
 	</head>
 	<body>
 		<div class="page">
