--- a/en/apps.html
+++ b/en/apps.html
@@ -16,11 +16,11 @@
 	<meta name="author" content="SFERA">
   <title>SFERA Project &#x2d; Official website, social network.</title>
 
-  <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/apps9.css">
+  <link href="../assets/css/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/apps.css">
   <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../assets/css/header9.css">
+  <link rel="stylesheet" href="../assets/css/header.css">
 </head>
 <body>
   <div class="page">
@@ -57,8 +57,9 @@
                     <feBlend mode="normal" in2="shape" result="effect1_innerShadow_6961_2109" />
                 </filter>
             </defs>
-        </svg></label></a>
-
+          </svg>
+        </label>
+      </a>
       </div>
       <ul class="nav_list" >
         <li class="header_menu-tablet">
@@ -123,15 +124,14 @@
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/investment.html">Investment</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/team.html">Team</a></li>
           <li class="lang_tablet" >
-              <div class="img_lang">
-                  <img class="img_lang-tablet"loading="lazy" src="../assets/img/language_tablet.png" alt="">
-              </div>
-              <div class="list_lang-tablet">
-                <a class="lang_list-link active" href="#"> English</a>
-                <a class="lang_list-link" href="../ru/apps.html">Russian</a>
-                <a class="lang_list-link" href="../cs/apps.html">Ceština</a>
-              </div>
-
+            <div class="img_lang">
+              <img class="img_lang-tablet"loading="lazy" src="../assets/img/language_tablet.png" alt="">
+            </div>
+            <div class="list_lang-tablet">
+              <a class="lang_list-link active" href="#"> English</a>
+              <a class="lang_list-link" href="../ru/apps.html">Russian</a>
+              <a class="lang_list-link" href="../cs/apps.html">Ceština</a>
+            </div>
           </li>
           <li class="download_button-tablet">
 						<ul class="downloads_button">
@@ -541,7 +541,8 @@
 						  <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href=" https://www.instagram.com/sfera_motivator/"target="_blank" title="Our Instagram">Instagram </a></li>
             </ul>
           </div>
-				<a href="#section__landing" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
+        </div>
+				<a href="#section__landing" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt="top"></a>
         <div class="footer__copyright">
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">SFERA position</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — SFERA Project | All rights reserved by SPHERE LLC</p>
