--- a/ru/startups.html
+++ b/ru/startups.html
@@ -11,9 +11,9 @@
 <link href=../assets/img/favicon-32px.89beb086.png rel=icon sizes=32x32 type=image/png>
 <link href=../assets/img/favicon-64px.7cf38571.png rel=icon sizes=64x64 type=image/png>
 <title>Проект SFERA - Официальный сайт, социальная сеть.</title>
-<link href=../assets/css/main.e1ae0bf9.css rel=stylesheet>
-<link href=../assets/css/startups9.css rel=stylesheet>
-<link href=../assets/css/header9.css rel=stylesheet>
+<link href=../assets/css/main.css rel=stylesheet>
+<link href=../assets/css/startups.css rel=stylesheet>
+<link href=../assets/css/header.css rel=stylesheet>
 <div class=page>
   <nav class=nav_menu id=section__landing>
     <input class=myCheckBox id=myCheck type=checkbox>
