--- a/cs/startups.html
+++ b/cs/startups.html
@@ -14,9 +14,9 @@
 <meta name="keywords" content="HTML, CSS, JavaScript">
 <meta name=«Owner» coment=«SFERA»>
 <meta name="author" content="SFERA">
-<link href=../assets/css/main.e1ae0bf9.css rel=stylesheet>
-<link href=../assets/css/startups9.css rel=stylesheet>
-<link href=../assets/css/header9.css rel=stylesheet>
+<link href=../assets/css/main.css rel=stylesheet>
+<link href=../assets/css/startups.css rel=stylesheet>
+<link href=../assets/css/header.css rel=stylesheet>
 
 <div class=page>
   <nav class=nav_menu id=section__landing>
