--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 		<meta name="description" content="SFERA is a mobile application that includes messenger, dating, job search, social network and much more. In the SFERE platform, dozens of applications interact closely with each other.">
 		<meta name="keywords" content="ASAP, Profile, Feed, Video, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
 		<title>SFERA Project &#x2d; Official website, social network.</title>
-		<link rel="stylesheet" href="assets/css/landing9.css">
-		<link rel="stylesheet" href="assets/css/landing-card9.css">
-		<link rel="stylesheet" href="assets/css/main.e1ae0bf9.css">
-		<link rel="stylesheet" href="assets/css/header9.css">
+		<link rel="stylesheet" href="assets/css/landing.css">
+		<link rel="stylesheet" href="assets/css/landing-card.css">
+		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" href="assets/css/header.css">
 	</head>
 	<body>
 		<div class="page">
@@ -554,7 +554,7 @@
 						<li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href=" https://www.instagram.com/sfera_motivator/"target="_blank" title="Our Instagram">Instagram </a></li>
 					</ul>
 				</div>
-				<a href="#section__landing" class="footer-top"><img src="./assets/img/arrow_upward_24px.svg" alt=""></a>
+				<a href="#section__landing" class="footer-top"><img src="./assets/img/arrow_upward_24px.svg" alt="top"></a>
         <div class="footer__copyright">
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">SFERA position</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — SFERA Project | All rights reserved by SPHERE LLC</p>
