--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -12,9 +12,9 @@
 <meta name="author" content="SFERA">
 <meta content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой." name=description>
 <meta content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose" name=keywords>
-<link href=../assets/css/main.e1ae0bf9.css rel=stylesheet>
-<link href=../assets/css/downloads9.css rel=stylesheet>
-<link href=../assets/css/header9.css rel=stylesheet>
+<link href=../assets/css/main.css rel=stylesheet>
+<link href=../assets/css/downloads.css rel=stylesheet>
+<link href=../assets/css/header.css rel=stylesheet>
 <div class=page>
   <nav class=nav_menu>
     <input class=myCheckBox id=myCheck type=checkbox>
