--- a/cs/index.html
+++ b/cs/index.html
@@ -14,10 +14,10 @@
   	<link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   	<link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
   	<title>Oficiální web projektu SFERA, sociální síť.</title>
-		<link rel="stylesheet" href="../assets/css/landing.css">
-		<link rel="stylesheet" href="../assets/css/landing-card.css">
-		<link rel="stylesheet" href="../assets/css/main.css">
-		<link rel="stylesheet" href="../assets/css/header.css">
+		<link rel="stylesheet" href="../assets/css/landing1.css">
+		<link rel="stylesheet" href="../assets/css/landing-card1.css">
+		<link rel="stylesheet" href="../assets/css/main1.css">
+		<link rel="stylesheet" href="../assets/css/header1.css">
 	</head>
 	<body>
 		<div class="page">
@@ -131,7 +131,7 @@
 					</li>
 					<li class="download_button-tablet">
 						<ul class="downloads_button">
-							<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios">Stáhnout na IOS</a></li>
+							<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="button_downloads_ios button button_theme_light button_type_ios ">Stáhnout na IOS</a></li>
 							<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="button_downloads_android button button_theme_light button_type_android">Stáhnout na Android </a></li>
 						</ul>
 					</li>
@@ -169,8 +169,8 @@
 						<li class="link-list-left-color">Vše zadarmo a bez reklamy</li>
 						<li class="lead__links-container apps__lead-links-container">
 							<ul class="lead__download-links-list">
-								<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android button_ios_tablet">Stáhnout na Android </a></li>
-								<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios button_android_tablet">Stáhnout na IOS</a></li>
+								<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android button_ios_tablet-cs">Stáhnout na Android </a></li>
+								<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios button_android_tablet-cs">Stáhnout na IOS</a></li>
 							</ul>
 						</li>
 					</ul>
