--- a/ru/team.html
+++ b/ru/team.html
@@ -13,9 +13,9 @@
     <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
     <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
     <title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
-    <link href="../assets/css/main.css" rel="stylesheet">
-    <link href="../assets/css/team.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/css/header.css">
+    <link href="../assets/css/main1.css" rel="stylesheet">
+    <link href="../assets/css/team1.css" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/css/header1.css">
 </head>
 
 <body>
