--- a/ru/apps.html
+++ b/ru/apps.html
@@ -13,9 +13,9 @@
 	<meta name=«Owner» coment=«SFERA»>
 	<meta name="author" content="SFERA">
   <title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
-  <link href="../assets/css/main.css" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/apps.css">
-  <link rel="stylesheet" href="../assets/css/header.css">
+  <link href="../assets/css/main1.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/apps1.css">
+  <link rel="stylesheet" href="../assets/css/header1.css">
   <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
